--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="projectBack"style="text-align:left">
                   <ul>
                     <li class="liInline companyTitle darkText">Tier 5</li>
-                    <li class="liInline"><img class ="icon" alt="Picture of World" src="images/home/web-logo-dark.png"></li>
+                    <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="images/home/web-logo-dark.png"></li>
 
                   </ul>
                   <p class="projectDes darkText" style="text-align:left">Designed all aspects of start-up's outbound web-based sales platform as part of 2 person team.</p>
@@ -70,7 +70,7 @@
                   <div class="projectBack" style="text-align:left">
                     <ul>
                       <li class="liInline companyTitle lightText">WebMD</li>
-                      <li class="liInline"><img class ="icon" alt="iPhone icon" src="images/home/iphone-logo-light.png"></li>
+                      <li class="liInline"><img id="iconWebMd" class ="icon" alt="iPhone icon" src="images/home/iphone-logo-light.png"></li>
                     </ul>
                     <p class="projectDes lightText" style="text-align:left">Designed native app and wearable that generates news from biotatisticsas part of 3 person team.</p>
                     <button class="lightButton backButton" type="button"><a href="webmd.html">see more</a></button>
@@ -93,7 +93,7 @@
           <div class="projectBack" style="text-align:left">
             <ul>
               <li class="liInline companyTitle lightText">Beauty Cures</li>
-              <li class="liInline"><img class ="icon" alt="Picture of World" src="images/home/iphone-logo-light.png"></li>
+              <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="images/home/iphone-logo-light.png"></li>
             </ul>
             <p class="projectDes lightText" style="text-align:left">Created &amp; designed "epicurious for your face," you can make beauty products right form your fridge.</p>
             <button class="lightButton backButton" type="button"><a href="beauty.html">see more</a></button>
@@ -112,7 +112,7 @@
             <div class="projectBack" style="text-align:left">
               <ul>
                 <li class="liInline companyTitle darkText">Emoji-Libs</li>
-                <li class="liInline"><img class ="icon" alt="World icon" src="images/home/web-logo-dark.png"></li>
+                <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="images/home/web-logo-dark.png"></li>
               </ul>
               <p class="projectDes darkText" style="text-align:left">Designed native app and wearable that generates news from biotatistics</p>
               <button class="darkButton backButton" type="button"><a href="emoji-libs.html">see more</a></button>
