Moving down title of backs

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
               <div class= "back light">
                 <div class="projectBack"style="text-align:left">
-                  <ul>
+                  <ul class="titleDown">
                     <li class="liInline companyTitle darkText">Tier 5</li>
                     <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="images/home/web-logo-dark.png"></li>
 
@@ -68,11 +68,11 @@
 
                 <div class= "back dark">
                   <div class="projectBack" style="text-align:left">
-                    <ul>
+                    <ul class="titleDown">
                       <li class="liInline companyTitle lightText">WebMD</li>
                       <li class="liInline"><img id="iconWebMd" class ="icon" alt="iPhone icon" src="images/home/iphone-logo-light.png"></li>
                     </ul>
-                    <p class="projectDes lightText" style="text-align:left">Designed native app and wearable that generates news from biotatisticsas part of 3 person team.</p>
+                    <p class="projectDes lightText" style="text-align:left">Designed native app &amp; companion wearable that generates news and information taylored to your own personal biotatistics.</p>
                     <button class="lightButton backButton" type="button"><a href="webmd.html">see more</a></button>
                   </div>
                 </div>
@@ -91,11 +91,11 @@
 
         <div class= "back dark">
           <div class="projectBack" style="text-align:left">
-            <ul>
+            <ul class="titleDown">
               <li class="liInline companyTitle lightText">Beauty Cures</li>
               <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="images/home/iphone-logo-light.png"></li>
             </ul>
-            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "epicurious for your face," you can make beauty products right form your fridge.</p>
+            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "epicurious for your face," recipes and tips that help you to make beauty products right form your fridge.</p>
             <button class="lightButton backButton" type="button"><a href="beauty.html">see more</a></button>
           </div>
         </div>
@@ -110,11 +110,11 @@
           </div>
           <div class= "back light">
             <div class="projectBack" style="text-align:left">
-              <ul>
+              <ul class="titleDown">
                 <li class="liInline companyTitle darkText">Emoji-Libs</li>
                 <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="images/home/web-logo-dark.png"></li>
               </ul>
-              <p class="projectDes darkText" style="text-align:left">Designed native app and wearable that generates news from biotatistics</p>
+              <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded this site to help people to learn how to use emojis as my final project in my front end web development course.</p>
               <button class="darkButton backButton" type="button"><a href="emoji-libs.html">see more</a></button>
             </div>
           </div>
