Fine tuning home page

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="images/home/web-logo-dark.png"></li>
 
                   </ul>
-                  <p class="projectDes darkText" style="text-align:left">Designed all aspects of start-up's outbound web-based sales platform as part of 2 person team.</p>
+                  <p class="projectDes darkText" style="text-align:left">Designed all aspects of start-up's outbound web-based sales platform. Design increased market opporunity by 3x.</p>
                   <button class="darkButton backButton" type="button"><a href="tier5.html">see more</a></button>
                 </div>
               </div>
