--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'> -->
+<!-- <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans' rel='stylesheet' type='text/css'> -->
+<!-- <link href='https://fonts.googleapis.com/css?family=Asap' rel='stylesheet' type='text/css'> -->
+<link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
     <title>Jessica Davies UX Design</title>
     <link  rel="stylesheet" href="home.css" media="screen" charset="utf-8">
       <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
@@ -52,7 +55,7 @@
                     <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="images/home/web-logo-dark.png"></li>
 
                   </ul>
-                  <p class="projectDes darkText" style="text-align:left">Designed all aspects of start-up's outbound web-based sales platform. Design increased market opporunity by 3x.</p>
+                  <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Design now suitable for all types of salespeople, increased market opporunity by 3x.</p>
                   <button class="darkButton backButton" type="button"><a href="tier5.html">see more</a></button>
                 </div>
               </div>
@@ -95,7 +98,7 @@
               <li class="liInline companyTitle lightText">Beauty Cures</li>
               <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="images/home/iphone-logo-light.png"></li>
             </ul>
-            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "epicurious for your face," recipes and tips that help you to make beauty products right form your fridge.</p>
+            <p class="projectDes lightText" style="text-align:left">Created &amp; designed "epicurious for your face." This native app offeres recipes and tips that help you to make beauty products right form your fridge.</p>
             <button class="lightButton backButton" type="button"><a href="beauty.html">see more</a></button>
           </div>
         </div>
