--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </header>
       <img id="jdLogo" alt="Designers Logo" src="images/home/jd-logo.png">
     </div>
+    <!-- pig -->
 
   <div id="content">
     <div id="rotatingText">
