--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
           <div class="clearFix"></div>
       </header>
-      <img id="jdLogo" alt="Designers Logo" src="images/home/jd-logo.png">
+      <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
     </div>
     <!-- pig -->
 
