--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
           <div class="clearFix"></div>
       </header>
-      <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+      <img id="jdLogo" alt="Designers Logo" src="mymyimages/home/jd-logo.png">
     </div>
     <!-- pig -->
 
@@ -46,14 +46,14 @@
         <div class="flipper">
 
               <div class="front light containerLeft">
-                    <div><img id="octo" alt="Tier 5 Octopus Logo" src="images/home/tier5-hula-right.png"></div>
+                    <div><img id="octo" alt="Tier 5 Octopus Logo" src="mymyimages/home/tier5-hula-right.png"></div>
               </div>
 
               <div class= "back light">
                 <div class="projectBack"style="text-align:left">
                   <ul class="titleDown">
                     <li class="liInline companyTitle darkText">Tier 5</li>
-                    <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="images/home/web-logo-dark.png"></li>
+                    <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="mymyimages/home/web-logo-dark.png"></li>
 
                   </ul>
                   <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Design now suitable for all types of salespeople, increased market opporunity by 3x.</p>
@@ -67,14 +67,14 @@
           <div class="flipper">
 
                 <div class="front dark">
-                      <img id="webMd"alt="Web MD" src="images/home/webmd-logo.png">
+                      <img id="webMd"alt="Web MD" src="myimages/home/webmd-logo.png">
                 </div>
 
                 <div class= "back dark">
                   <div class="projectBack" style="text-align:left">
                     <ul class="titleDown">
                       <li class="liInline companyTitle lightText">WebMD</li>
-                      <li class="liInline"><img id="iconWebMd" class ="icon" alt="iPhone icon" src="images/home/iphone-logo-light.png"></li>
+                      <li class="liInline"><img id="iconWebMd" class ="icon" alt="iPhone icon" src="myimages/home/iphone-logo-light.png"></li>
                     </ul>
                     <p class="projectDes lightText" style="text-align:left">Designed native app &amp; companion wearable that generates news and information taylored to your own personal biotatistics.</p>
                     <button class="lightButton backButton" type="button"><a href="webmd.html">see more</a></button>
@@ -90,14 +90,14 @@
   <div class="flipper containerLeft">
 
         <div class="front dark">
-            <div><img id="beauty" alt="Beauty Cures Logo" src="images/home/bc-logo.png"></div>
+            <div><img id="beauty" alt="Beauty Cures Logo" src="myimages/home/bc-logo.png"></div>
         </div>
 
         <div class= "back dark">
           <div class="projectBack" style="text-align:left">
             <ul class="titleDown">
               <li class="liInline companyTitle lightText">Beauty Cures</li>
-              <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="images/home/iphone-logo-light.png"></li>
+              <li class="liInline"><img id="iconBeauty" class ="icon" alt="Picture of World" src="myimages/home/iphone-logo-light.png"></li>
             </ul>
             <p class="projectDes lightText" style="text-align:left">Created &amp; designed "epicurious for your face." This native app offeres recipes and tips that help you to make beauty products right form your fridge.</p>
             <button class="lightButton backButton" type="button"><a href="beauty.html">see more</a></button>
@@ -110,13 +110,13 @@
   <div class="flip-container" ontoucstart="this.classList.toggle('hover');">
     <div class="flipper">
           <div class="front light">
-                <img id="bunnyEmoji"alt="Bunny Emoji" src="images/home/bunny.png">
+                <img id="bunnyEmoji"alt="Bunny Emoji" src="myimages/home/bunny.png">
           </div>
           <div class= "back light">
             <div class="projectBack" style="text-align:left">
               <ul class="titleDown">
                 <li class="liInline companyTitle darkText">Emoji-Libs</li>
-                <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="images/home/web-logo-dark.png"></li>
+                <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="myimages/home/web-logo-dark.png"></li>
               </ul>
               <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded this site to help people to learn how to use emojis as my final project in my front end web development course.</p>
               <button class="darkButton backButton" type="button"><a href="emoji-libs.html">see more</a></button>
@@ -136,9 +136,9 @@
     <footer>
           <ul id="footerUl">
             <li class="footerLi"><a href="mailto:thejessicadavies@gmail.com">thejessicadavies@gmail.com</a></li>
-            <li class="footerLi footerLogos"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="images/home/linked-in.png"></a></li>
-            <li class="footerLi"><a href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="images/home/git.png"></a></li>
-            <li class="footerLi liRight">Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="images/home/copyright.png">&nbsp;2016 Jessica Davies.</li>
+            <li class="footerLi footerLogos"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a></li>
+            <li class="footerLi"><a href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a></li>
+            <li class="footerLi liRight">Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</li>
           </ul>
     </footer>
       <script src="home.js"></script>
