--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </nav>
           <div class="clearFix"></div>
       </header>
-      <img id="jdLogo" alt="Designers Logo" src="mymyimages/home/jd-logo.png">
+      <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
     </div>
     <!-- pig -->
 
@@ -46,14 +46,14 @@
         <div class="flipper">
 
               <div class="front light containerLeft">
-                    <div><img id="octo" alt="Tier 5 Octopus Logo" src="mymyimages/home/tier5-hula-right.png"></div>
+                    <div><img id="octo" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png"></div>
               </div>
 
               <div class= "back light">
                 <div class="projectBack"style="text-align:left">
                   <ul class="titleDown">
                     <li class="liInline companyTitle darkText">Tier 5</li>
-                    <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="mymyimages/home/web-logo-dark.png"></li>
+                    <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="myimages/home/web-logo-dark.png"></li>
 
                   </ul>
                   <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Design now suitable for all types of salespeople, increased market opporunity by 3x.</p>
