Subject to email

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
     <footer>
           <ul id="footerUl">
-            <li class="footerLi"><a href="mailto:thejessicadavies@gmail.com">thejessicadavies@gmail.com</a></li>
+            <li class="footerLi"><a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a></li>
             <li class="footerLi footerLogos"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a></li>
             <li class="footerLi"><a href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a></li>
             <li class="footerLi liRight">Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</li>
