--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
     <title>Jessica Davies UX Design</title>
     <link  rel="stylesheet" href="home.css" media="screen" charset="utf-8">
-      <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
   </head>
 <body>
   <div id="wrapper">
