Adding thumbnail images

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
         <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
         <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
           <link  rel="stylesheet" href="about.css" media="screen" charset="utf-8">
+          <link  rel="image_src" href="myimages/about/me.png" media="screen" charset="utf-8">
   </head>
 
 <div id="imgContainer">
@@ -23,7 +24,7 @@
         <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
     </header>
 
-<div id="myPicDiv"><img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg"></div> 
+<div id="myPicDiv"><img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg"></div>
 
   </div>
 
