--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
+  <link  rel="image_src" href="myimages/home/design-port.png" media="screen" charset="utf-8">
   </head>
 <body>
   <div id="wrapper">
