Adding in css files

--- a/about.html
+++ b/about.html
@@ -5,50 +5,56 @@
     <title>Jessica Davies UX Design: About Me</title>
     <!-- <link  rel="stylesheet" href="home.css" media="screen" charset="utf-8"> -->
       <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
-        <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
-        <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
-          <link  rel="stylesheet" href="about.css" media="screen" charset="utf-8">
-          <link  rel="image_src" href="myimages/about/me.png" media="screen" charset="utf-8">
-  </head>
-
-<div id="imgContainer">
-    <header>
-        <nav id = "navHome">
-            <ul id="navUl">
-              <li class="homeBarli" id= "homeHome"><a href="index.html">Home</a></li>
-              <li class="homeBarli" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
-              <li class="homeBarli" id= "aboutHome"><a href="about.html">About</a></li>
-            </ul>
-          </nav>
-        <div class="clearFix"></div>
-        <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
-    </header>
-
-<div id="myPicDiv"><img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg"></div>
-
-  </div>
-
-  <div id="contact">
-    <h2 class="homeH2">Jessica Davies</h2>
-
-    <h3 id="jobTitle">Startegist | UX Designer | Heathcare SME</h3>
-    <div id="contactInfo">
-      <ul>
-        <li class="deetsLi"><img class="deetsImg" alt="Phone Emoji" src="myimages/about/phone-icon.png"></li>
-        <li class="deetsLi">(925) 968-8212</li>
-          <li class="deetsLi"><img class="deetsImg" alt="World Emoji" src="myimages/about/world.png"></li>
-        <li class="deetsLi"><a id="websiteLink" href="http://thejessicadavies.com">thejessicdavies.com</a></li>
-      <li class="deetsLi"><img class="deetsImg" alt="Email Emoji" src="myimages/about/email-emoji.png"></li>
-      <li class="deetsLi" ><a id="gmail" href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a></li>
-      <li class="deetsLi"><img class="deetsImg" alt="GutHub Octocat" src="myimages/about/github.png"></li>
-      <li class="deetsLi"><a id="gitHubLink" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages">GitHub</a></li>
-      </ul>
-    </div>
-
-  </div>
-
+      <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
+      <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
+      <link  rel="stylesheet" href="about.css" media="screen" charset="utf-8">
+      <!-- DOESN'T WORK -->
+      <!-- <link  rel="image_src" src="myimages/about/me.png"> -->
+</head>
 <body>
+  <div id='wrapper'>
 
+    <div id="header">
+      <div id="imgContainer">
+          <header>
+              <nav id = "navHome">
+                  <ul id="navUl">
+                    <li class="homeBarli" id= "homeHome"><a href="index.html">Home</a></li>
+                    <li class="homeBarli" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
+                    <li class="homeBarli" id= "aboutHome"><a href="about.html">About</a></li>
+                  </ul>
+                </nav>
+              <div class="clearFix"></div>
+          </header>
+          <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+
+        </div>
+        <div id="myPicDiv"><img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg"></div>
+    </div>
+  <div id="content">
+
+    <div id="contact">
+
+      <h2 class="homeH2">Jessica Davies</h2>
+
+      <h3 id="jobTitle">Strategist | UX Designer | Heathcare SME</h3>
+
+      <div id="contactInfo">
+        <ul>
+          <li class="deetsLi"><img class="deetsImg" alt="Phone Emoji" src="myimages/about/phone-icon.png"></li>
+          <li class="deetsLi">(925) 968-8212</li>
+            <li class="deetsLi"><img class="deetsImg" alt="World Emoji" src="myimages/about/world.png"></li>
+          <li class="deetsLi"><a id="websiteLink" href="http://thejessicadavies.com">thejessicdavies.com</a></li>
+        <li class="deetsLi"><img class="deetsImg" alt="Email Emoji" src="myimages/about/email-emoji.png"></li>
+        <li class="deetsLi" ><a id="gmail" href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved you Portfolio">thejessicadavies@gmail.com</a></li>
+        <li class="deetsLi"><img class="deetsImg" alt="GutHub Octocat" src="myimages/about/github.png"></li>
+        <li class="deetsLi"><a id="gitHubLink" href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages">GitHub</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <div id="footer">
     <footer>
           <ul id="footerUl">
             <li class="footerLi"><a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved your Portfolio!">thejessicadavies@gmail.com</a></li>
@@ -57,6 +63,10 @@
             <li class="footerLi liRight">Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</li>
           </ul>
     </footer>
+  </div>
+  </div>
+
+
 
 </body>
 </html>
