--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
-  <link  rel="image_src" src="myimages/home/design-port.png" media="screen" charset="utf-8">
+    <!-- NOT WORKING -->
+    <link  rel="image_src" src="myimages/home/design-port.png">
   </head>
 <body>
   <div id="wrapper">
