Add home link to logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             </nav>
           <div class="clearFix"></div>
       </header>
-      <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+      <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/>
+
+
+        <!-- <div class= "square" id="squareA"><a class= "madLibPhotos" href="emoji-breakup.html"><img alt="Broken Heart iPhone Emoji" src="images/site-image/iphone-break-up.png" width="90"></a> </div> -->
     </div>
     <!-- pig -->
 
