--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
                 </nav>
               <div class="clearFix"></div>
           </header>
-          <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+          <!-- <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"> -->
+            <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/>
 
         </div>
         <div id="myPicDiv"><img id="myPic" alt="Designers Picture" src="myimages/about/me.jpg"></div>
