Changing rotating text color

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
       <div class="textParent">
         <p id="jessP">Jessica is a </p>
         <p>
-          <span class="word mountain">Business Strategist.</span>
+          <span class="word octoGreen">Strategist.</span>
           <span class="word sunset">UX Designer.</span>
-          <span class="word mountain">Front End Developer.</span>
-          <span class="word sunset">Health Care SME.</span>
-          <span class="word charcol">Skydiver.</span>
+          <span class="word octoOrange">Developer.</span>
+          <span class="word octoGreen">Healthcare SME.</span>
+          <span class="word sunset">Skydiver.</span>
         </p>
       </div>
     </div>
