--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
     <!-- NOT WORKING -->
-    <link  rel="image_src" src="myimages/home/design-port.png">
+    <link  rel="image_src" href="https://jcdaviesauthor.github.io/portfolio/index.html">
+    <!-- ="myimages/home/design-port.png"> -->
   </head>
 <body>
   <div id="wrapper">
