--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
     <!-- NOT WORKING -->
-    <link  rel="image_src" href="https://jcdaviesauthor.github.io/portfolio/index.html">
+    <meta property="og:image" content= "myimages/home/design-port.png"/>
     <!-- ="myimages/home/design-port.png"> -->
   </head>
 <body>
