--- a/index.html
+++ b/index.html
@@ -27,13 +27,9 @@
           <div class="clearFix"></div>
       </header>
       <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/>
-
-
-        <!-- <div class= "square" id="squareA"><a class= "madLibPhotos" href="emoji-breakup.html"><img alt="Broken Heart iPhone Emoji" src="images/site-image/iphone-break-up.png" width="90"></a> </div> -->
     </div>
-    <!-- pig -->
 
-  <div id="content">
+    <div id="content">
     <div id="rotatingText">
       <div class="textParent">
         <p id="jessP">Jessica is a </p>
@@ -47,13 +43,13 @@
       </div>
     </div>
 
-<section id="cardSection">
+    <section id="cardSection">
         <!-- OCTOPUS SQUARE -->
     <div id="section1">
-      <div class="flip-container" ontoucstart="this.classList.toggle('hover');">
+      <div class="flip-container containerLeft" ontoucstart="this.classList.toggle('hover');">
         <div class="flipper">
 
-              <div class="front light containerLeft">
+              <div class="front light">
                     <div><img id="octo" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png"></div>
               </div>
 
@@ -94,8 +90,8 @@
 
 <!-- BeautyCures -->
 <div id="section2">
-<div class="flip-container" ontoucstart="this.classList.toggle('hover');">
-  <div class="flipper containerLeft">
+<div class="flip-container containerLeft" ontoucstart="this.classList.toggle('hover');">
+  <div class="flipper">
 
         <div class="front dark">
             <div><img id="beauty" alt="Beauty Cures Logo" src="myimages/home/bc-logo.png"></div>
