Added New page for Project 1 Tier 5

--- a/tier5.html
+++ b/tier5.html
@@ -1,1 +1,54 @@
-Hi Welcome to Tier 5! Oh Yeah!
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Jessica Davies UX Design Project 1: Tier 5 </title>
+    <link  rel="stylesheet" href="nav.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
+    <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
+    <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+  </head>
+  <body>
+      <div id='wrapper'>
+
+        <div id="header">
+          <div id="imgContainer">
+              <header>
+                  <nav id = "navHome">
+                      <ul id="navUl">
+                        <li class="homeBarli" id= "homeHome"><a href="index.html">Home</a></li>
+                        <li class="homeBarli" id= "resumeHome"><a href="emoji-nav-about.html">Resume</a></li>
+                        <li class="homeBarli" id= "aboutHome"><a href="about.html">About</a></li>
+                      </ul>
+                    </nav>
+                  <div class="clearFix"></div>
+              </header>
+                <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
+              <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
+            </div>
+        </div>
+
+        <div id="projectTitleBox" class="titleBackground">
+
+          <img id="projectLogo" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
+
+          <h2 id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</h2>
+
+        </div>
+      </div>
+      </div>
+
+      <div id="footer">
+        <footer>
+              <ul id="footerUl">
+                <li class="footerLi"><a href="mailto:thejessicadavies@gmail.com?subject=Jessica's Portfolio&body=Hi Jessica Loved your Portfolio!">thejessicadavies@gmail.com</a></li>
+                <li class="footerLi footerLogos"><a href="https://www.linkedin.com/in/jessica-davies-cfa-46009b13"><img class="footerLogos" alt="Linked in Logo" src="myimages/home/linked-in.png"></a></li>
+                <li class="footerLi"><a href="https://github.com/jcdaviesauthor/FEWD37/tree/gh-pages"><img class="footerLogos" alt="Git Hub Logo" src="myimages/home/git.png"></a></li>
+                <li class="footerLi liRight">Web design, content, and code&nbsp;<img id="crImg"alt="Copyright Symbol" src="myimages/home/copyright.png">&nbsp;2016 Jessica Davies.</li>
+              </ul>
+        </footer>
+      </div>
+
+    </div>
+  </body>
+</html>
