--- a/tier5.html
+++ b/tier5.html
@@ -6,7 +6,9 @@
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="all-files.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
-    <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'>
+    <!-- <link href='https://fonts.googleapis.com/css?family=Cabin' rel='stylesheet' type='text/css'> -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
   </head>
   <body>
       <div id='wrapper'>
@@ -27,15 +29,29 @@
               <img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png">
             </div>
         </div>
+      <div id="content">
+        <div id="projectTitleBox" class="titleBackground container">
 
-        <div id="projectTitleBox" class="titleBackground">
+          <div class= "container image-swap">
+            <img class="projectLogo" class="picone" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
+            <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/tier5-hula-left.png">
 
-          <img id="projectLogo" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
+          </div>
 
-          <h2 id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</h2>
-
+            <h2 id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</h2>
         </div>
-      </div>
+        <div id="introBoxes">
+          <div class="introBox">
+            <p class="boxTitle">The Client</p>
+            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to update their outbound sales-lead generating platform (which contained only a very basic bulk-lead generator) and to give their product a visual facelift. But after doing extenisive research we found they need much more. Our redesign increased their market opportunity by 3x.
+          </p>
+          </div>
+            <div class="introBox">
+            <p class="boxTitle">My Role</p>
+            <p class="boxText heavyText">Over 2 weeks our very close-knit, two-person team, worked collaberatively with every aspect of UX Design process: research, user interviews, user testing, design, sketching, creating low and medium fidelity protoytypes, and presenting our work.
+            </p>
+          </div>
+        </div>
       </div>
 
       <div id="footer">
